fix responsive bug on mobile devices

--- a/theme/minastik/css/minastik/responsive.css
+++ b/theme/minastik/css/minastik/responsive.css
@@ -493,6 +493,14 @@
     max-width: 100%;
   }
 
+  .blogs-wrap {
+    padding: 40px 20px !important;
+  }
+
+  #bo_v {
+    max-width: 90%;
+  }
+
   .decors,
   .banner_hero--wrap img.banner_decor {
     display: none;
@@ -500,7 +508,7 @@
 
   .banner_top--left {
     text-align: center;
-    padding-top: 50px;
+    padding-top: 100px;
   }
 
   .banner_top--left h2 {
